# food-review-agent

./: .env.example  .gitignore  README.md  log.server.txt  main.py  pyproject.toml  run_server.sh
app/: agent.py  config.py  database.py  deps.py  logger.py  main.py  models.py  recommend_tier.py  schemas.py  security.py  upload_paths.py
app/data/: regions.json
app/routers/: ai.py  auth.py  regions.py  reviews.py  uploads.py  user.py
data/: dianping.db
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/dianping/personal/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.tsx  api.ts  datetime.ts  index.css  recommendTier.tsx  vite-env.d.ts
frontend/src/components/: AITab.tsx  LoginScreen.tsx  ProfileTab.tsx  ReviewEditorSheet.tsx  ReviewImageGallery.tsx  ReviewMediaGallery.tsx  ReviewVideoList.tsx  ReviewsTab.tsx
static/: index.html
static/assets/: index-3cPOOUCE.js  index-BPzyTQFa.css  index-CZt-Jcpe.js  index-D2wPnhNU.js  index-D6_Vt7_C.css  index-DbzWr-s1.js  index-DuA97K6J.js  index-DuYaDyN8.js  index-FdFzcYwv.js  index-mX3CjhaQ.js
